--- a/eda.Rmd
+++ b/eda.Rmd
@@ -9,6 +9,7 @@ output: html_notebook
 library(tidyverse)
 library(magrittr)
 library(skimr)
+library(janitor)
 ```
 
 ### Importacion
@@ -99,7 +100,31 @@ data %>%
 
 ### Room 8
 
+#Eda Bivariado entre churn y Dependents
+
+data %>%  tabyl(Churn, Dependents ) -> t1 
 
 
+t1 %>%
+  adorn_totals(c("row", "col")) %>%
+  adorn_percentages("all") %>% 
+  adorn_pct_formatting(rounding = "half up", digits = 0) %>%
+  adorn_ns() %>%
+  adorn_title("combined") %>%
+  knitr::kable()
+
+#Eda Bivariado entre churn y OnlineSecurity
+
+
+data %>%  tabyl(Churn,OnlineSecurity ) -> t2 
+
+
+t2 %>%
+  adorn_totals(c("row", "col")) %>%
+  adorn_percentages("all") %>% 
+  adorn_pct_formatting(rounding = "half up", digits = 0) %>%
+  adorn_ns() %>%
+  adorn_title("combined") %>%
+  knitr::kable()
 
 ### Room 10
