--- a/eda.Rmd
+++ b/eda.Rmd
@@ -126,5 +126,20 @@ t2 %>%
   adorn_ns() %>%
   adorn_title("combined") %>%
   knitr::kable()
+  
+  
+#Eda Bivariado entre churn y StreamingMovies
+
+
+data %>%  tabyl(Churn,OnlineSecurity ) -> t3 
+
+
+t3 %>%
+  adorn_totals(c("row", "col")) %>%
+  adorn_percentages("all") %>% 
+  adorn_pct_formatting(rounding = "half up", digits = 0) %>%
+  adorn_ns() %>%
+  adorn_title("combined") %>%
+  knitr::kable()  
 
 ### Room 10
