--- a/eda.Rmd
+++ b/eda.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "EDA"
 output: html_notebook
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
 ## Preliminares
@@ -17,6 +20,7 @@ library(janitor)
 ```{r}
 data <- read_csv('Data/WA_Fn-UseC_-Telco-Customer-Churn.csv')
 ```
+
 #### Verificar y corregir columnas
 
 ```{r}
@@ -32,8 +36,6 @@ data %>%
   data
 ```
 
-
-
 # EDA
 
 ## EDA Univariado
@@ -41,9 +43,6 @@ data %>%
 ```{r}
 skim( data)
 ```
-
-
-
 
 ```{r}
 data %>% 
@@ -55,7 +54,6 @@ data %>%
     )
 ```
 
-
 ## EDA Multivariado
 
 ### Room 2
@@ -63,18 +61,18 @@ data %>%
 #### Genero vs Churn
 
 **Tabla**
+
 ```{r}
 
 ```
 
 **Grafico**
+
 ```{r}
 
 ```
 
 **Interpretacion**
-
-
 
 #### PhoneService vs Churn
 
@@ -84,74 +82,71 @@ data %>%
 
 **Interpretacion**
 
-
-
 ### Room 4
 
-
-
-
-
-
 ### Room 6
-
-
-
 
 ### Room 8
 
 #Eda Bivariado entre churn y Dependents
 
-data %>%  tabyl(Churn, Dependents ) -> t1 
+
+```{r}
+data %>% tabyl(Churn, Dependents ) -> t1
+
+t1 %>% adorn_totals(c("row", "col")) %>% adorn_percentages("all") %>%
+adorn_pct_formatting(rounding = "half up", digits = 0) %>% adorn_ns() %>%
+  adorn_title("combined") %>% knitr::kable()
+
+data %>% count(Churn, Dependents) %>% mutate(porc = n / sum(n)) %>%
+ggplot(aes(Dependents, n, fill = Churn)) + geom_bar(stat = 'identity') +
+geom_text(aes(label = scales::percent(porc), y = n, vjust = 1)) +
+labs(title = "Churn vs Dependents", x = "Dependents", y = "Count") +
+theme_minimal()
 
 
-t1 %>%
-  adorn_totals(c("row", "col")) %>%
-  adorn_percentages("all") %>% 
-  adorn_pct_formatting(rounding = "half up", digits = 0) %>%
-  adorn_ns() %>%
-  adorn_title("combined") %>%
-  knitr::kable()
+```
 
-data %>%
-  count(Churn, Dependents) %>%
-  mutate(porc = n / sum(n)) %>%
-  ggplot(aes(Dependents, n, fill = Churn)) +
-  geom_bar(stat = 'identity') +
-  geom_text(aes(label = scales::percent(porc), y = n-0.5)) +
-  labs(title = "Churn vs Dependents",
-       x = "Dependents",
-       y = "Count")  
 
 
 #Eda Bivariado entre churn y OnlineSecurity
 
 
-data %>%  tabyl(Churn,OnlineSecurity ) -> t2 
+```{r}
 
 
-t2 %>%
-  adorn_totals(c("row", "col")) %>%
-  adorn_percentages("all") %>% 
-  adorn_pct_formatting(rounding = "half up", digits = 0) %>%
-  adorn_ns() %>%
-  adorn_title("combined") %>%
-  knitr::kable()
-  
-  
+data %>% tabyl(Churn,OnlineSecurity ) -> t2
+
+t2 %>% adorn_totals(c("row", "col")) %>% adorn_percentages("all") %>%
+adorn_pct_formatting(rounding = "half up", digits = 0) %>% adorn_ns()%>% adorn_title("combined")%>% knitr::kable()
+
+data %>% count(Churn, OnlineSecurity) %>% mutate(porc = n / sum(n)) %>%
+  ggplot(aes(OnlineSecurity, n, fill = Churn)) + geom_bar(stat =
+'identity') + geom_text(aes(label = scales::percent(porc), y = n, vjust
+= 1)) + labs(title = "Churn vs OnlineSecurity", x = "OnlineSecurity", y
+= "Count")
+
+
+```
+
 #Eda Bivariado entre churn y StreamingMovies
 
+```{r}
 
-data %>%  tabyl(Churn,OnlineSecurity ) -> t3 
+data %>% tabyl(Churn,StreamingMovies) -> t3
 
+t3 %>% adorn_totals(c("row", "col")) %>% adorn_percentages("all") %>%
+adorn_pct_formatting(rounding = "half up", digits = 0) %>% adorn_ns() %>% 
+  adorn_title("combined") %>% knitr::kable()
 
-t3 %>%
-  adorn_totals(c("row", "col")) %>%
-  adorn_percentages("all") %>% 
-  adorn_pct_formatting(rounding = "half up", digits = 0) %>%
-  adorn_ns() %>%
-  adorn_title("combined") %>%
-  knitr::kable()  
+data %>% count(Churn, StreamingMovies) %>% mutate(porc = n / sum(n)) %>%
+  ggplot(aes(StreamingMovies, n, fill = Churn)) + geom_bar(stat =
+'identity') + geom_text(aes(label = scales::percent(porc), y = n, vjust
+= 1)) + labs(title = "Churn vs StreamingMovies", x = "StreamingMovies", y
+= "Count")
+
+```
+
 
 
 
