--- a/eda.Rmd
+++ b/eda.Rmd
@@ -243,11 +243,12 @@ t1 %>% adorn_totals(c("row", "col")) %>% adorn_percentages("all") %>%
 adorn_pct_formatting(rounding = "half up", digits = 0) %>% adorn_ns() %>%
   adorn_title("combined") %>% knitr::kable()
 
-data %>% count(Churn, Dependents) %>% mutate(porc = n / sum(n)) %>%
-ggplot(aes(Dependents, n, fill = Churn)) + geom_bar(stat = 'identity') +
-geom_text(aes(label = scales::percent(porc), y = n, vjust = 1)) +
-labs(title = "Churn vs Dependents", x = "Dependents", y = "Count") +
-theme_minimal()
+data %>% count(Churn, Dependents) %>%
+  mutate(porc = n / sum(n)) %>% 
+  ggplot(aes(fill=Churn, y=porc, x=Dependents)) + 
+    geom_col(position="stack") +
+    geom_text(aes(label=scales::percent(porc)),position = position_stack(vjust=0.5))+
+  scale_y_continuous(labels = scales::percent_format()) 
 
 
 ```
@@ -266,14 +267,38 @@ data %>% tabyl(Churn,OnlineSecurity ) -> t2
 t2 %>% adorn_totals(c("row", "col")) %>% adorn_percentages("all") %>%
 adorn_pct_formatting(rounding = "half up", digits = 0) %>% adorn_ns()%>% adorn_title("combined")%>% knitr::kable()
 
-data %>% count(Churn, OnlineSecurity) %>% mutate(porc = n / sum(n)) %>%
-  ggplot(aes(OnlineSecurity, n, fill = Churn)) + geom_bar(stat =
-'identity') + geom_text(aes(label = scales::percent(porc), y = n, vjust
-= 1)) + labs(title = "Churn vs OnlineSecurity", x = "OnlineSecurity", y
-= "Count")
+
+data %>% count(Churn, OnlineSecurity) %>%
+  mutate(porc = n / sum(n)) %>% 
+  ggplot(aes(fill=Churn, y=porc, x=OnlineSecurity)) + 
+    geom_col(position="stack") +
+    geom_text(aes(label=scales::percent(porc)),position = position_stack(vjust=0.5))+
+  scale_y_continuous(labels = scales::percent_format()) 
 
 
 ```
+
+#Eda Bivariado entre Churn y StreamingMovies  
+
+```{r}
+
+data %>% tabyl(Churn,StreamingMovies) -> t3
+
+t3 %>% adorn_totals(c("row", "col")) %>% adorn_percentages("all") %>%
+adorn_pct_formatting(rounding = "half up", digits = 0) %>% adorn_ns()%>% adorn_title("combined")%>% knitr::kable()
+
+
+data %>% count(Churn, StreamingMovies) %>%
+  mutate(porc = n / sum(n)) %>% 
+  ggplot(aes(fill=Churn, y=porc, x=StreamingMovies)) + 
+    geom_col(position="stack") +
+    geom_text(aes(label=scales::percent(porc)),position = position_stack(vjust=0.5))+
+  scale_y_continuous(labels = scales::percent_format()) 
+
+
+```
+
+
 
 #Eda Bivariado entre churn y Total Charges
 
@@ -293,6 +318,25 @@ data %>%
   labs(title = "Churn vs Total Charges",
        x = "Churn",
        y = "Total Charges")
+
+```
+
+#Eda Multivariado entre MonthlyCharges vs Dependents vs Churn
+
+```{r}
+data %>%  group_by(Churn,Dependents) %>% 
+    summarise(n = n(),
+            promedio = mean(MonthlyCharges,na.rm = T),
+            n_missing = sum(is.na(MonthlyCharges)),
+            desv = sd(MonthlyCharges, na.rm =T)) -> t5
+t5
+data %>%
+  ggplot(aes(x = Churn, y = MonthlyCharges, fill = Dependents)) +
+  geom_boxplot() +
+  stat_summary(fun = mean, geom = "point", shape = 3, size = 3, color = "white", position = position_dodge(width = 0.75)) +
+  labs(title = "Monthtly Charges for Dependents vs Churn",
+       x = "Churn",
+       y = "Monthly Charges")
 
 ```
 
