🔧 Fix (functions): Add ANOVA, Kruskall-Wallis, T-Test and Cohen's D tests for statistical analysis

--- a/notebooks/room12_eda_20240203.ipynb
+++ b/notebooks/room12_eda_20240203.ipynb
@@ -23,12 +23,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 1,
       "id": "cb4a3bd5f4b5d281",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.434810800Z",
-          "start_time": "2024-02-03T17:39:53.409289Z"
+          "end_time": "2024-02-04T00:35:35.378270800Z",
+          "start_time": "2024-02-04T00:35:35.372265600Z"
         },
         "collapsed": false
       },
@@ -54,12 +54,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 2,
       "id": "b02e5beb7ebce41e",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.473343700Z",
-          "start_time": "2024-02-03T17:39:53.437813Z"
+          "end_time": "2024-02-04T00:35:35.411800200Z",
+          "start_time": "2024-02-04T00:35:35.377269900Z"
         },
         "collapsed": false
       },
@@ -104,12 +104,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 3,
       "id": "9945d042af3ffb11",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.508373200Z",
-          "start_time": "2024-02-03T17:39:53.465337Z"
+          "end_time": "2024-02-04T00:35:35.452334500Z",
+          "start_time": "2024-02-04T00:35:35.407796800Z"
         },
         "collapsed": false
       },
@@ -314,12 +314,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 4,
       "id": "7d2ed9fc67c24c4f",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.508873600Z",
-          "start_time": "2024-02-03T17:39:53.500867300Z"
+          "end_time": "2024-02-04T00:35:35.466847500Z",
+          "start_time": "2024-02-04T00:35:35.452835100Z"
         },
         "collapsed": false
       },
@@ -373,12 +373,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 5,
       "id": "128e69cd6d7cf5e3",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.556915200Z",
-          "start_time": "2024-02-03T17:39:53.507873100Z"
+          "end_time": "2024-02-04T00:35:35.511385700Z",
+          "start_time": "2024-02-04T00:35:35.458840600Z"
         },
         "collapsed": false
       },
@@ -722,12 +722,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 6,
       "id": "b023ddb122b1be97",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.557415700Z",
-          "start_time": "2024-02-03T17:39:53.541902900Z"
+          "end_time": "2024-02-04T00:35:35.511886400Z",
+          "start_time": "2024-02-04T00:35:35.501376700Z"
         },
         "collapsed": false
       },
@@ -736,10 +736,10 @@
         "dataframe: pd.DataFrame = raw_dataframe.drop(\n",
         "    columns=[\"customerID\"], axis=\"columns\"\n",
         ").copy()\n",
-        "dataframe['TotalCharges'] = pd.to_numeric(\n",
-        "    dataframe['TotalCharges'].replace(' ', np.nan), errors='coerce'\n",
+        "dataframe[\"TotalCharges\"] = pd.to_numeric(\n",
+        "    dataframe[\"TotalCharges\"].replace(\"\" \"\", np.nan), errors=\"coerce\"\n",
         ")\n",
-        "dataframe['TotalCharges'] = dataframe['TotalCharges'].fillna(0)"
+        "dataframe[\"TotalCharges\"] = dataframe[\"TotalCharges\"].fillna(0)"
       ]
     },
     {
@@ -754,12 +754,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 7,
       "id": "e5a8398d006443d4",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.568425700Z",
-          "start_time": "2024-02-03T17:39:53.549909300Z"
+          "end_time": "2024-02-04T00:35:35.529901700Z",
+          "start_time": "2024-02-04T00:35:35.509884Z"
         },
         "collapsed": false
       },
@@ -914,12 +914,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 8,
       "id": "e2761b0801b98453",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.602454600Z",
-          "start_time": "2024-02-03T17:39:53.562920700Z"
+          "end_time": "2024-02-04T00:35:35.582446500Z",
+          "start_time": "2024-02-04T00:35:35.523395900Z"
         },
         "collapsed": false
       },
@@ -961,19 +961,19 @@
       "source": [
         "# Example categorical columns with two unique values\n",
         "binary_categoricals: list[str] = [\n",
-        "    'gender',\n",
-        "    'SeniorCitizen',\n",
-        "    'Partner',\n",
-        "    'Dependents',\n",
-        "    'PhoneService',\n",
-        "    'PaperlessBilling',\n",
-        "    'Churn',\n",
+        "    \"gender\",\n",
+        "    \"SeniorCitizen\",\n",
+        "    \"Partner\",\n",
+        "    \"Dependents\",\n",
+        "    \"PhoneService\",\n",
+        "    \"PaperlessBilling\",\n",
+        "    \"Churn\",\n",
         "]\n",
         "\n",
         "for col in binary_categoricals:\n",
         "    # Map the categories to boolean\n",
         "    dataframe[col] = (\n",
-        "        dataframe[col].map({'Yes': True, 'No': False}).astype('bool')\n",
+        "        dataframe[col].map({\"Yes\": True, \"No\": False}).astype(\"bool\")\n",
         "    )\n",
         "dataframe.info(memory_usage=\"deep\")"
       ]
@@ -1001,12 +1001,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 9,
       "id": "18dcefae10e9bd4f",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-02-03T17:39:53.624473600Z",
-          "start_time": "2024-02-03T17:39:53.572429400Z"
+          "end_time": "2024-02-04T00:35:35.613473500Z",
+          "start_time": "2024-02-04T00:35:35.534905800Z"
         },
         "collapsed": false
       },
