--- a/model_Room_8.Rmd
+++ b/model_Room_8.Rmd
@@ -52,12 +52,38 @@ data %>%
                      names_sep = c("_\\.")) %>% view()
 
 
-data %>% 
+#Convertir a factor
+data %>%
+  mutate( Churn = factor(Churn,
+  levels= c("Yes","No"),
+  labels= c("si", "no"))
+  ) -> data
+
+
+
+data %>%
   mutate(
-    SeniorCitizen= factor(SeniorCitizen, levels= c(0, 1), 
-                             labels= c('no', 'si') )
-  ) ->
-  data
+    SeniorCitizen = factor(SeniorCitizen, levels = c(0, 1), labels = c('no', 'si')),
+    gender = factor(gender, levels = c('Female', 'Male'), labels = c('Mujeres', 'Hombres')),
+    Partner = factor(Partner, levels = c('Yes', 'No'), labels = c('si', 'No')),
+    Dependents = factor(Dependents, levels = c('Yes', 'No'), labels = c('si', 'No')),
+    PhoneService = factor(PhoneService, levels = c('Yes', 'No'), labels = c('si', 'No')),
+    PaperlessBilling = factor(PaperlessBilling, levels = c('Yes', 'No'), labels = c('si', 'No')),
+    MultipleLines = factor(MultipleLines, levels = c('Yes', 'No', "No phone service"), labels = c('si', 'no', 'sin servicio')),
+    InternetService = factor(InternetService, levels = c('DSL', 'Fiber optic', 'No'), labels = c('DSL', 'Fibra optica', 'No')),
+    OnlineSecurity = factor(OnlineSecurity, levels = c('No', 'Yes', 'No internet service'), labels = c('No', 'Yes', 'sin servicio')),
+    OnlineBackup = factor(OnlineBackup, levels = c('Yes', 'No', 'No internet service'), labels = c('si', 'no', 'sin servicio')),
+    DeviceProtection = factor(DeviceProtection, levels = c('Yes', 'No', 'No internet service'), labels = c('si', 'no', 'sin servicio')),
+    TechSupport = factor(TechSupport, levels = c('Yes', 'No', 'No internet service'), labels = c('si', 'no', 'sin servicio')),
+    StreamingTV = factor(StreamingTV, levels = c('Yes', 'No', 'No internet service'), labels = c('si', 'no', 'sin servicio')),
+    StreamingMovies = factor(StreamingMovies, levels = c('Yes', 'No', 'No internet service'), labels = c('si', 'no', 'sin servicio')),
+    Contract = factor(Contract, levels = c('Month-to-month', 'One year', 'Two year'), labels = c('mes a mes', 'un año', 'dos años')),
+    PaymentMethod = factor(PaymentMethod, levels = c('Electronic check', 'Mailed check', 'Bank transfer (automatic)', 'Credit card (automatic)'), labels = c('cheque electronico', 'cheque mail', 'transferencia bancaria', 'transferencia automatica'))
+  ) -> data
+
+
+
+
 
 ```
 
@@ -92,7 +118,26 @@ data %>%
   count(name = "frec") %>%
 ungroup() %>%
 mutate( Porc= frec/sum(frec))
+
+data %>%
+group_by(Churn) %>%
+count( name = 'frec') %>%
+ungroup() %>%
+mutate( Porc= frec/sum(frec)) %>%
+ggplot( aes(x= Churn, y= Porc)) +
+geom_segment( aes(xend= Churn, y=0, yend=Porc),
+color= "steelblue", linewidth= 1) +
+geom_point( size=5, color= "steelblue") +
+coord_flip() +
+scale_y_continuous( labels = percent_format()) +
+labs(title= 'Porcentaje de Clientes que Abandonan',
+y= "Porcentaje", x= "Churn") +
+theme_bw()
+
+
 ```
+
+El porcentaje de clientes que abandonan el servicio de telecomunicaciones es aproximadamente 3 a 1 en el muestra de análisis. 
 
 ## EDA Multivariado
 =======
@@ -428,11 +473,12 @@ data %>%  select_if(where(is.numeric)) %>% GGally::ggpairs()
 ```
 
 
-## Modelamiento 
+## Modelamiento - Random Forest
 
 **Train - Test Split**
 
 ```{r}
+#data %>% select(-customerID) -> data
 
 set.seed(1234) # Semilla para aleatorios
 split <- data %>%
@@ -461,13 +507,237 @@ dim(test)
 ```
 **Preprocesamiento**
 
-***Balanceo de datos***
+***Receipe y Balanceo de datos***
 
 ```{r}
+receta <- train %>%
+recipe(Churn ~ . ) %>% ## Crea la receta
+## Eliminar variables que no usaremos
+step_rm(customerID) %>%
+## Crear nuevas variables (insight desde el EDA)
+# step_mutate( account_length_anio= account_length/12 )
+## Imputar los datos
+# step_impute_mean()
+step_impute_knn(TotalCharges ) %>%
+## Estandarizacion/Normalizacion de numericas
+step_normalize( all_numeric(), -all_outcomes()) %>%
+## Crear una categoría "otros" que agrupe a categorias pequeñas
+step_other(all_nominal(), -all_outcomes() , threshold = 0.07, other = "otros") %>%
+## Crear una categoría "new" para observaciones con labels "no muestreados"
+step_novel(all_nominal(), -all_outcomes() , new_level = "new") %>%
+## Crear variables indicadoras para cada categoría
+step_dummy(all_nominal(), -all_outcomes() ) %>% # Dummy
+## Eliminar automáticamente variables con alta correlacion
+## para evitar la multicolinealidad xi ~ xj
+# step_corr(all_numeric(), -all_outcomes(), threshold = 0.9) %>%
+## Tambien podemos eliminar variables con multicolinealidad "a mano"
+#step_rm(total_day_charge, total_eve_charge,
+#total_night_charge, total_intl_charge) %>% # Eliminar
+## Eliminar columnas con varianza cercana a cero
+step_nzv(all_predictors()) %>% 
+themis::step_upsample(Churn, over_ratio = 0.9, skip= TRUE, seed= 123)  
 
 
 
 ```
 
+***Entrenamiento y ajuste de Hiperparámetro***
+
+```{r}
+
+set.seed(1234)
+cv <- vfold_cv(train, v = 5, repeats = 1, strata = Churn)
+cv
+
+
+```
+
+***Métricas***
+
+```{r}
+metricas <- metric_set(accuracy, sens, spec, bal_accuracy)
+metricas
+
+
+```
+
+***Especificacion del modelo***
+
+```{r}
+rf_sp <-
+  rand_forest(
+  mtry = tune(), trees = tune(), min_n = tune() ) %>%
+  set_engine("ranger", importance = "impurity") %>%
+  set_mode("classification")
+
+```
+
+***Work Flow***
+
+```{r}
+rf_wflow <-
+  workflow() %>%
+  add_recipe(receta) %>%
+  add_model(rf_sp) 
+  rf_wflow
+
+
+```
+***Afinamiento de Hiperpárametros***
+
+```{r}
+set.seed(123)
+rf_grid <- rf_sp %>%
+## preguntamos los parametros tuneables del modelo
+parameters() %>%
+## Vamos a definir un rango para el min_n y mtry
+update(min_n= min_n( range= c(70, 170)),
+mtry= mtry( range= c(4, 7))) %>%
+grid_latin_hypercube(size = 10) #preguntar como se construye la malla
+
+
+```
+
+**Paralelización**
+
+```{r}
+#parallel::detectCores(logical=FALSE)
+
+```
+
+**Entrenamiento de Malla de Busqueda en la Crossvalidation**
+
+```{r}
+set.seed(123)
+rf_tuned <- tune_grid(
+rf_wflow, ## Modelo
+resamples= cv, ## Crossvalidation
+grid = rf_grid, ## Malla de Busqueda
+metrics = metricas, ## Metricas
+control= control_grid(allow_par = T, save_pred = T) ## Paralel y Pred
+)
+rf_tuned
+
+```
+Evaluamos que modelo resulto mejor
+
+```{r}
+show_best(rf_tuned, metric = 'accuracy', n = 10)
+```
+```{r}
+show_best(rf_tuned, metric = 'sens', n = 10)
+```
+```{r}
+show_best(rf_tuned, metric = 'spec', n = 10)
+
+```
+```{r}
+show_best(rf_tuned, metric = 'bal_accuracy', n = 10)
+```
+
+Revisando los resultados de las métricas de evaluación del modelo y considerando que es de interés para le empresa contar con la mejor estimación de los individuos que realmente abandonan el servicio se selecciona como referencia los hiperpárametros del modelo número 6 que presenta los mejores resultados en sensibilidad, para ajustar el modelo final. 
+
+**Nueva Malla de Búsqueda**
+
+```{r}
+
+set.seed(123)
+
+rf_grid_2 <- crossing(
+  min_n = seq(114, 118, 2),
+  mtry = c(4, 5),
+  trees= seq(1270, 1570, 100)
+)
+
+rf_grid_2
+
+```
+
+**Entrenamiento de Malla de Busqueda en la Crossvalidation**
+
+```{r}
+
+set.seed(123)
+rf_tuned_2 <- tune_grid(
+  rf_wflow, ## Modelo
+  resamples= cv, ## Crossvalidation
+  grid = rf_grid_2, ## Malla de Busqueda
+  metrics = metricas, ## Metricas
+  control= control_grid(allow_par = T, save_pred = T) ## Paralel y Pred
+)
+rf_tuned_2
+
+```
+Evaluamos que modelo resulto mejor de la segunda grilla de hiperpárametros
+
+```{r}
+show_best(rf_tuned_2, metric = 'accuracy', n = 10)
+```
+
+```{r}
+show_best(rf_tuned_2, metric = 'sens', n = 10)
+```
+
+
+```{r}
+show_best(rf_tuned_2, metric = 'spec', n = 10)
+```
+
+```{r}
+show_best(rf_tuned_2, metric = 'bal_accuracy', n = 10)
+```
+**Modelo final**
+
+```{r}
+## Definir la mejor combinacion
+rf_pars_fin <- select_best(rf_tuned_2, metric = 'sens')
+## Finalizar (darle valores a parametros tuneables) el workflow
+rf_wflow_fin <-
+rf_wflow %>%
+  finalize_workflow(rf_pars_fin)
+rf_wflow_fin
+```
+Entrenar el modelo final 
+
+```{r}
+rf_fitted <- fit(rf_wflow_fin, train)
+rf_fitted
+
+
+```
+Modelo sin workflow
+
+```{r}
+rf_model_fin <- extract_fit_parsnip(rf_fitted)
+```
+
+**Evaluación del Modelo**
+
+Evaluación en la data de entrenamiento
+
+```{r}
+
+train %>%
+predict(rf_fitted , new_data = . ) %>%
+mutate(Real= train$Churn) %>%
+conf_mat(truth = Real, estimate = .pred_class ) %>%
+summary
+
+```
+Evaluación en la data de prueba
+
+```{r}
+test %>%
+predict(rf_fitted, new_data = . ) %>%
+mutate(Real= test$Churn) %>%
+  conf_mat(truth = Real, estimate = .pred_class ) %>%
+summary
+```
+**¿Que variables pueden estar relacionadas más con el abandono de clientes?**
+```{r}
+library(vip)
+rf_model_fin %>%
+  vip(geom = "point")
+```
 
 
